--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <input type="button" id="btn_search" value="query5"
       onClick="Search()"/>
   <input type="button" id="btn_search" value="add"
-      onClick="Search()"/>
+      onClick="addFormSearch()"/>
   <input type="button" id="btn_search" value="update"
       onClick="Search()"/>
 </div>
