--- a/forms/needAddForm.html
+++ b/forms/needAddForm.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>AddForm</title>
+<title>Need AddForm</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <script type="text/javascript" src="scripts/search.js"></script>
 </head>
@@ -11,28 +11,20 @@
 <br/>
 <div align="center">
   <h2>CS460 Fall2015, Program #4<h2>
-  <h4>Add Form</h4>
+  <h4>Need Add Form</h4>
   
   <br/>
   <br/>
-  <form action="addEmployee.jsp">
-	First Name: <br/>
-	<input type="text" name="First Name">
+  <form action="addNeed.jsp">
+	Client ID: <br/>
+	<input type="text" name="client">
 	<br/>
-	Middle Name: <br/>
-	<input type="text" name="Middle Name">
+	Instructor ID: </br>
+	<input type="text" name="instructor">
 	<br/>
-	Last Name: <br/>
-	<input type="text" name="Last Name">
+	Description: </br>
+	<input type="text" name="description">
 	<br/>
-	SSN: <br/>
-	<input type="text" name="SSN">
-	<br/>
-	Salary: <br/>
-	<input type="text" name="Salary">
-	<br/>
-	Office Number: <br/>
-	<input type="text" name="Office No">
 	<br/>
 	<input type="submit" value="Submit">
   </form>
