changes to employee and role add forms

--- a/forms/roleAddForm.html
+++ b/forms/roleAddForm.html
@@ -21,6 +21,9 @@
 	<br/>
 	Role: </br>
 	<input type="text" name="role">
+	</br>
+	Office Number: </br>
+	<input type="text" name="officeno">
 	</br></br>
 	<input type="submit" value="Submit">
   </form>
