Wrote insertion methods, reorganized repo

--- a/ROOT/addform.html
+++ b/ROOT/addform.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Driving Test AddForm</title>
+<title>AddForm</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <script type="text/javascript" src="scripts/search.js"></script>
 </head>
@@ -11,26 +11,25 @@
 <br/>
 <div align="center">
   <h2>CS460 Fall2015, Program #4<h2>
-  <h4>Driving Test Add Form</h4>
+  <h4>Add Form</h4>
   
   <br/>
   <br/>
-  <form action="addDrivingTest.jsp">
-	Instructor ID: <br/>
-	<input type="text" name="Instructor ID">
+  <form action="addEmployee.jsp">
+	First Name: <br/>
+	<input type="text" name="First Name">
 	<br/>
-	Client ID: </br>
-	<input type="text" name="clientID">
+	Middle Name: <br/>
+	<input type="text" name="Middle Name">
 	<br/>
-	Time: </br>
-	<input type="text" name="time">
+	Last Name: <br/>
+	<input type="text" name="Last Name">
 	<br/>
-	Test Type: </br>
-	<input type="text" name="testType">
+	Salary: <br/>
+	<input type="text" name="Salary">
 	<br/>
-	Pass: </br>
-	<input type="text" name="pass">
-	<br/>
+	Office Number: <br/>
+	<input type="text" name="Office No">
 	<br/>
 	<input type="submit" value="Submit">
   </form>
