--- a/ROOT/interviewAddForm.html
+++ b/ROOT/interviewAddForm.html
@@ -19,10 +19,22 @@
 	Interviewer ID: <br/>
 	<input type="text" name="interviewer">
 	<br/>
-	Time: </br>
-	<input type="text" name="time">
+	Year: </br>
+	<input type="text" name="year">
 	<br/>
-	Client: </br>
+	Month (number): </br>
+	<input type="text" name="month">
+	</br>
+	Day (number): </br>
+	<input type="text" name="day">
+	</br>
+	Hour: </br>
+	<input type="text" name="hour">
+	</br>
+	Minute: </br>
+	<input type="text" name="minute">
+	</br>
+	Client ID: </br>
 	<input type="text" name="client">
 	<br/>
 	<br/>
