--- a/ROOT/lessonAddForm.html
+++ b/ROOT/lessonAddForm.html
@@ -22,9 +22,21 @@
 	Instructor ID: </br>
 	<input type="text" name="instructor">
 	<br/>
-	Time: </br>
-	<input type="text" name="time">
+	Year: </br>
+	<input type="text" name="year">
 	<br/>
+	Month (number): </br>
+	<input type="text" name="month">
+	</br>
+	Day (number): </br>
+	<input type="text" name="day">
+	</br>
+	Hour: </br>
+	<input type="text" name="hour">
+	</br>
+	Minute: </br>
+	<input type="text" name="minute">
+	</br>
 	Is Blocked: </br>
 	<input type="text" name="isBlocked">
 	<br/>
