--- a/ROOT/clientAddForm.html
+++ b/ROOT/clientAddForm.html
@@ -28,12 +28,15 @@
 	Registered: </br>
 	<input type="text" name="registered">
 	<br/>
-	Date of Birth: </br>
-	<input type="text" name="dob">
+	Year of Birth: </br>
+	<input type="text" name="birthYear">
 	<br/>
-	SSN: </br>
-	<input type="text" name="ssn">
-	<br/>
+	Month of Birth (number): </br>
+	<input type="text" name="birthMonth">
+	</br>
+	Day of Birth (number): </br>
+	<input type="text" name="birthDay">
+	</br>
 	Provision Number: </br>
 	<input type="text" name="provisionNum">
 	<br/>
