Adjusting input forms and .jsp files

--- a/ROOT/drivingTestAddForm.html
+++ b/ROOT/drivingTestAddForm.html
@@ -38,10 +38,11 @@
 	<input type="text" name="minute">
 	</br>
 	Test Type: </br>
-	<input type="text" name="testType">
+	<input type="radio" name="testType" value="Practical">Practical </br>
+	<input type="radio" name="testType" value="Written">Written
 	<br/>
 	Pass: </br>
-	<input type="text" name="pass">
+	<input type="checkbox" name="pass" value="True">
 	<br/>
 	<br/>
 	<input type="submit" value="Submit">
