--- a/ROOT/lessonAddForm.html
+++ b/ROOT/lessonAddForm.html
@@ -37,8 +37,8 @@
 	Minute: </br>
 	<input type="text" name="minute">
 	</br>
-	Is Blocked: </br>
-	<input type="text" name="isBlocked">
+	Is Booked in a Block: </br>
+	<input type="checkbox" name="isBlocked" value="True">
 	<br/>
 	Miles Driven: </br>
 	<input type="text" name="milesDriven">
