--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -10,14 +10,9 @@
 <br/>
 <br/>
 <div align="center">
-  <h2>CS460 Fall2015, Program #4<h2>
-  <h4>Demo of a Simple JSP Application</h4>
-  <br/>
-  <h6>Please excuse the simple appearance of this page,
-      just click the button</h6>
-  <br/>
-  <input type="button" id="btn_search" value="list all employees"
-      onClick="Search()"/>
+
+<a href="insertionIndex.html">Insert rows into tables here</a>
+
 </div>
 </body>
 </html>
