--- a/ROOT/failureDeleteForm.html
+++ b/ROOT/failureDeleteForm.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>demo of JSP with one button</title>
+<title>Failure Delete Form</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <script type="text/javascript" src="scripts/search.js"></script>
 </head>
@@ -10,12 +10,21 @@
 <br/>
 <br/>
 <div align="center">
-
-<a href="insertionIndex.html">Insert rows into tables here</a>
-<br/>
-<a href="deletionIndex.html">Delete tuples from tables here</a>
-
+  <h2>CS460 Fall2015, Program #4<h2>
+  <h4>Failure Delete Form</h4>
+  
+  <br/>
+  <br/>
+  <form action="deleteFailure.jsp">
+	Test ID: </br>
+	<input type="text" name="testID">
+	<br/>
+	Description: </br>
+	<input type="text" name="description">
+	<br/>
+	<br/>
+	<input type="submit" value="Submit">
+  </form>
 </div>
 </body>
 </html>
-
