--- a/ROOT/insertionIndex.html
+++ b/ROOT/insertionIndex.html
@@ -13,33 +13,32 @@
   <h2>CS460 Fall2015, Program #4<h2>
   <h4>Choose a table to add to:</h4>
   <br/>
+  <a href="carAddForm.html">Car</a>
   <br/>
-  <input type="button" id="btn_search" value="Car"
-      onClick="carAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Client"
-      onClick="clientAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Driving Test"
-      onClick="drivingTestAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Employee"
-      onClick="employeeAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Failure"
-      onClick="failureAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Fault"
-      onClick="faultAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Inspection"
-      onClick="inspectionAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Interview"
-      onClick="interviewAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Lesson"
-      onClick="lessonAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Need"
-      onClick="needAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Note"
-      onClick="noteAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Office"
-      onClick="officeAddFormSearch()"/>
-  <input type="button" id="btn_search" value="Role"
-      onClick="roleAddFormSearch()"/>
+  <a href="clientAddForm.html">Client</a>
+  <br/>
+  <a href="dirvingTestAddForm.html">Driving Test</a>
+  <br/>
+  <a href="employeeAddForm.html">Employee</a>
+  <br/>
+  <a href="failureAddForm.html">Failure</a>
+  <br/>
+  <a href="faultAddForm.html">Fault</a>
+  <br/>
+  <a href="inspectionAddForm.html">Inspection</a>
+  <br/>
+  <a href="interviewAddForm.html">Interview</a>
+  <br/>
+  <a href="lessonAddForm.html">Lesson</a>
+  <br/>
+  <a href="needAddForm.html">Need</a>
+  <br/>
+  <a href="noteAddForm.html">Note</a>
+  <br/>
+  <a href="officeAddForm.html">Office</a>
+  <br/>
+  <a href="roleAddForm.html">Role</a>
+  <br/>
 </div>
 </body>
 </html>
