--- a/ROOT/inspectionAddForm.html
+++ b/ROOT/inspectionAddForm.html
@@ -16,21 +16,21 @@
   <br/>
   <br/>
   <form action="addInspection.jsp">
-	Inspection Year: </br>
+	Inspection Year: 
 	<input type="text" name="insDate">
 	<br/>
-	Inspection Month (number): </br>
-	<input type="text" name="insMonth">
-	Inspection Day (number): </br>
-	<input type="text" name="insDay">
-	Inspection Hour: </br>
-	<input type="text" name="insHour">
-	Inspection Minute: </br>
-	<input type="text" name="insMinute">
-	Inspector: </br>
-	<input type="text" name="inspector">
-	<br/>
-	Car ID: </br>
+	Inspection Month (number): 
+	<input type="text" name="insMonth"> </br>
+	Inspection Day (number): 
+	<input type="text" name="insDay"> </br>
+	Inspection Hour: 
+	<input type="text" name="insHour"> </br>
+	Inspection Minute: 
+	<input type="text" name="insMinute"> </br>
+	Inspector: 
+	<input type="text" name="inspector"> </br>
+	
+	Car ID:
 	<input type="text" name="carId">
 	<br/>
 	<br/>
