Added phone number field to Employee, implemented update query to assign a manager to an office

--- a/ROOT/employeeAddForm.html
+++ b/ROOT/employeeAddForm.html
@@ -28,6 +28,9 @@
 	Salary: <br/>
 	<input type="text" name="Salary">
 	<br/>
+	Phone Number: </br>
+	<input type="text" name="phoneNum" maxlength="10">
+	</br>
 	<input type="submit" value="Submit">
   </form>
 </div>
