--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -14,6 +14,8 @@
 <a href="insertionIndex.html">Insert rows into tables here</a>
 <br/>
 <a href="deletionIndex.html">Delete tuples from tables here</a>
+</br>
+<a href="managerAssignForm.html">Assign a manager to an office (Update Query)</a>
 
 </div>
 </body>
