Update query, office address, employee phone number, and employee/client sex

--- a/ROOT/clientAddForm.html
+++ b/ROOT/clientAddForm.html
@@ -40,6 +40,10 @@
 	Provision Number: </br>
 	<input type="text" name="provisionNum">
 	<br/>
+	Sex: </br>
+	<input type="radio" name="sex" value="M">Male </br>
+	<input type="radio" name="sex" value="F">Female
+	</br>
 	Assigned Instructor: </br>
 	<input type="text" name="assignedInstructor">
 	<br/>
