--- a/ROOT/employeeAddForm.html
+++ b/ROOT/employeeAddForm.html
@@ -31,6 +31,10 @@
 	Phone Number: </br>
 	<input type="text" name="phoneNum" maxlength="10">
 	</br>
+	Sex: </br>
+	<input type="radio" name="sex" value="M">Male </br>
+	<input type="radio" name="sex" value="F">Female
+	</br>
 	<input type="submit" value="Submit">
   </form>
 </div>
