--- a/ROOT/managerAssignForm.html
+++ b/ROOT/managerAssignForm.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Office AddForm</title>
+<title>EmpAddForm</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <script type="text/javascript" src="scripts/search.js"></script>
 </head>
@@ -11,19 +11,20 @@
 <br/>
 <div align="center">
   <h2>CS460 Fall2015, Program #4<h2>
-  <h4>Office Add Form</h4>
+  <h4>Employee Add Form</h4>
   
   <br/>
   <br/>
-  <form action="addOffice.jsp">
-	City: </br>
-	<input type="text" name="city">
-	<br/>
-	Address: </br>
-	<input type="text" name="address">
-	<br/>
+  <form action="assignManager.jsp">
+	Office Id Number: </br>
+	<input type="text" name="officeId">
+	</br>
+	Employee Id Number: </br>
+	<input type="text" name="empId">
+	</br>
 	<input type="submit" value="Submit">
   </form>
 </div>
 </body>
 </html>
+
