Delete Jsp files

--- a/ROOT/insertionIndex.html
+++ b/ROOT/insertionIndex.html
@@ -17,7 +17,7 @@
   <br/>
   <a href="clientAddForm.html">Client</a>
   <br/>
-  <a href="dirvingTestAddForm.html">Driving Test</a>
+  <a href="drivingTestAddForm.html">Driving Test</a>
   <br/>
   <a href="employeeAddForm.html">Employee</a>
   <br/>
