Create page that lists all managers

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>demo of JSP with one button</title>
+<title>CSC 460 Project 4</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 <script type="text/javascript" src="scripts/search.js"></script>
 </head>
@@ -16,7 +16,8 @@
 <a href="deletionIndex.html">Delete tuples from tables here</a>
 </br>
 <a href="managerAssignForm.html">Assign a manager to an office (Update Query)</a>
-
+</br>
+<a href="listManagers.jsp">List all managers</a>
 </div>
 </body>
 </html>
