--- a/ROOT/managerAssignForm.html
+++ b/ROOT/managerAssignForm.html
@@ -11,7 +11,7 @@
 <br/>
 <div align="center">
   <h2>CS460 Fall2015, Program #4<h2>
-  <h4>Employee Add Form</h4>
+  <h4>Assign a Manager to an Office</h4>
   
   <br/>
   <br/>
