Page to list all offices in Glasgow

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -18,6 +18,8 @@
 <a href="managerAssignForm.html">Assign a manager to an office (Update Query)</a>
 </br>
 <a href="listManagers.jsp">List all managers</a>
+</br>
+<a href="listGlasgowOffices.jsp">List address of all Glasgow offices</a>
 </div>
 </body>
 </html>
