Added Query to find all appointments

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -20,6 +20,10 @@
 <a href="listManagers.jsp">List all managers</a>
 </br>
 <a href="listGlasgowOffices.jsp">List address of all Glasgow offices</a>
+</br>
+<a href="findAppointmentForm.html">Find all of the timestamps of appointments for an Employee</a>
+</br>
+<a href="findInterviewForm.html">Find all the interviews for an Employee</a>
 </div>
 </body>
 </html>
