--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -24,6 +24,8 @@
 <a href="findAppointmentForm.html">Find all of the timestamps of appointments for an Employee</a>
 </br>
 <a href="findInterviewForm.html">Find all the interviews for an Employee</a>
+</br>
+<a href="getAverageMiles.jsp">List all managers</a>
 </div>
 </body>
 </html>
