--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -25,7 +25,7 @@
 </br>
 <a href="findInterviewForm.html">Find all the interviews for an Employee</a>
 </br>
-<a href="getAverageMiles.jsp">List all managers</a>
+<a href="getAverageMiles.jsp">List average miles driven per hour lesson</a>
 </div>
 </body>
 </html>
